# adk-stuff

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
.pre-commit-hooks/: check-secrets.sh
src/.adk/: session.db
src/delivery_team/: agent.py  schemas.py
src/delivery_team/team/: architect.py  coordinator.py  developer.py  product_owner.py  qa_engineer.py  scrum_master.py
src/delivery_team/tools/: diagram_tools.py  exec_tools.py  file_tools.py  search_tools.py
tests/: test_agent_entry.py  test_agents.py  test_diagram_tools.py  test_exec_tools.py  test_file_tools.py  test_schemas.py  test_search_tools.py
