[project]
name = "delivery_team"
version = "0.1.0"
description = "ADK Multi-Agent Software Delivery Team"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.0.0",
    "litellm>=1.85.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.rules]
all = "error"

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["src"]
