[project]
name = "delivery_team"
version = "0.1.0"
description = "ADK Multi-Agent Software Delivery Team"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.14.4",
    "google-adk>=2.0.0",
    "litellm>=1.85.1",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "pip-audit>=2.8.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.rules]
all = "error"

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.bandit]
skips = ["B101", "B404", "B603", "B607"]
targets = ["src"]
exclude_dirs = [".venv", "tests", ".pre-commit-hooks"]

[tool.coverage.run]
source = ["delivery_team"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
